// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List constructor list of Checkbox 1`] = `
ListDefinition {
  "config": {
    "type": CheckboxDefinition {
      "config": {
        "defaultValue": true,
        "label": "Checkbox",
      },
      "version": 1,
    },
  },
}
`;

exports[`List constructor list of Color 1`] = `
ListDefinition {
  "config": {
    "type": ColorDefinition {
      "config": {
        "defaultValue": "red",
        "label": "Color",
      },
      "version": 1,
    },
  },
}
`;

exports[`List constructor list of Combobox 1`] = `
ListDefinition {
  "config": {
    "type": ComboboxDefinition {
      "config": {
        "getOptions": [Function],
        "label": "Combobox",
      },
    },
  },
}
`;

exports[`List constructor list of Image 1`] = `
ListDefinition {
  "config": {
    "type": ImageDefinition {
      "config": {
        "label": "Image",
      },
      "version": 1,
    },
  },
}
`;

exports[`List constructor list of Link 1`] = `
ListDefinition {
  "config": {
    "type": GenericLinkDefinition {
      "config": {
        "label": "Link",
      },
    },
  },
}
`;

exports[`List constructor list of List 1`] = `
ListDefinition {
  "config": {
    "type": ListDefinition {
      "config": {
        "type": ListDefinition {
          "config": {
            "type": CheckboxDefinition {
              "config": {
                "defaultValue": true,
              },
              "version": 1,
            },
          },
        },
      },
    },
  },
}
`;

exports[`List constructor list of Number 1`] = `
ListDefinition {
  "config": {
    "type": NumberDefinition {
      "config": {
        "defaultValue": 1,
        "label": "Number",
      },
      "version": 1,
    },
  },
}
`;

exports[`List constructor list of Select 1`] = `
ListDefinition {
  "config": {
    "type": SelectDefinition {
      "config": {
        "label": "Select",
        "options": [
          {
            "label": "Alpha",
            "value": "a",
          },
        ],
      },
    },
  },
}
`;

exports[`List constructor list of Shape 1`] = `
ListDefinition {
  "config": {
    "type": ShapeDefinition {
      "config": {
        "type": {
          "checkbox": CheckboxDefinition {
            "config": {
              "defaultValue": true,
            },
            "version": 1,
          },
        },
      },
    },
  },
}
`;

exports[`List constructor list of TextArea 1`] = `
ListDefinition {
  "config": {
    "type": TextAreaDefinition {
      "config": {
        "defaultValue": "alpha",
        "label": "Text Area",
      },
      "version": 1,
    },
  },
}
`;

exports[`List constructor list of TextInput 1`] = `
ListDefinition {
  "config": {
    "type": TextInputDefinition {
      "config": {
        "defaultValue": "alpha",
        "label": "Text Input",
      },
      "version": 1,
    },
  },
}
`;

exports[`List serialization serialize/deserialize list of composable controls 1`] = `
{
  "config": {
    "label": "Color list",
    "type": {
      "config": {
        "label": "Color sub-list",
        "type": {
          "config": {
            "defaultValue": "red",
          },
          "type": "makeswift::controls::color",
          "version": 1,
        },
      },
      "type": "makeswift::controls::list",
    },
  },
  "type": "makeswift::controls::list",
}
`;

exports[`List serialization serialize/deserialize list of controls 1`] = `
{
  "config": {
    "label": "Color list",
    "type": {
      "config": {
        "defaultValue": "red",
      },
      "type": "makeswift::controls::color",
      "version": 1,
    },
  },
  "type": "makeswift::controls::list",
}
`;
